k8s/staging/service-alexey-borisov-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexey-borisov-service-staging
  labels:
    app: alexey-borisov-service-staging
spec:
  ports:
  - name: alexey-borisov-service-staging
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    project: alexey-borisov-app-staging
  type: NodePort
status:
  loadBalancer: {}
