k8s/staging/ingress-hosts-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alexey-borisov-ingress-staging
spec:
  rules:
    - host: xn--80acdkatfgh9abwig.xn--p1ai # алексейборисов.рф
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alexey-borisov-service-staging
                port:
                  number: 80
